Added Return to List button to the Detail view

--- a/src/ComicBookGallery/Views/Shared/_Layout.cshtml
+++ b/src/ComicBookGallery/Views/Shared/_Layout.cshtml
@@ -27,6 +27,16 @@
         </div>
     </div>
 
+    @if (ViewBag.ShowBackBar != null && ViewBag.ShowBackBar)
+    {
+        <div class="backbar">
+            <div class="container">
+                @Html.ActionLink("Return to List", "Index",
+                    null, new { @class = "btn btn-default" })
+            </div>
+        </div>
+    }
+
     <div class="container body-content">
         @RenderBody()
         <hr />
